[package]
name = "gits"
version = "0.1.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
description = "Shortcut to calling `git status`"
license = "MIT"
homepage = "https://github.com/hbina/gits"
repository = "https://github.com/hbina/gits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
